--- a/unit1.lfm
+++ b/unit1.lfm
@@ -15,6 +15,7 @@ object Form1: TForm1
     Align = alClient
     AutoSize = True
     Center = True
+    OnMouseMove = Image1MouseMove
     Picture.Data = {
       0A544A706567496D616765BE530300FFD8FFE111B84578696600004D4D002A00
       000008000C010000030000000108000000010100030000000106560000010200
@@ -6839,11 +6840,10 @@ object Form1: TForm1
     Top = 0
     Width = 221
     Align = alRight
-    Caption = 'Panel1'
     ClientHeight = 590
     ClientWidth = 221
     TabOrder = 0
-    object ChooseFile: TButton
+    object ChooseFileButton: TButton
       Left = 16
       Height = 25
       Top = 24
@@ -6851,7 +6851,7 @@ object Form1: TForm1
       Caption = 'Выбрать'
       TabOrder = 0
     end
-    object SaveFile: TButton
+    object SaveFileButton: TButton
       Left = 120
       Height = 25
       Top = 24
@@ -6873,6 +6873,14 @@ object Form1: TForm1
       Top = 64
       Width = 1
       ParentColor = False
+    end
+    object DiscolorToggle: TToggleBox
+      Left = 16
+      Height = 23
+      Top = 95
+      Width = 186
+      Caption = 'Обесцветить'
+      TabOrder = 2
     end
   end
 end
