--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,17 +1,17 @@
 object Form1: TForm1
-  Left = 257
-  Height = 590
-  Top = 192
-  Width = 859
+  Left = 244
+  Height = 541
+  Top = 115
+  Width = 818
   Caption = 'Form1'
-  ClientHeight = 590
-  ClientWidth = 859
+  ClientHeight = 541
+  ClientWidth = 818
   LCLVersion = '1.6.0.4'
   object Image1: TImage
     Left = 0
-    Height = 590
+    Height = 541
     Top = 0
-    Width = 638
+    Width = 597
     Align = alClient
     AutoSize = True
     Center = True
@@ -6833,14 +6833,16 @@ object Form1: TForm1
       A0EBE6F7117B5AD6EA57BABEB6DB5AD7597D6FB31BC95E9778BBECB76FE3FCF5
       EBFF00B7FD3A787FD6DAEBFFD9
     }
+    Proportional = True
+    Stretch = True
   end
   object Panel1: TPanel
-    Left = 638
-    Height = 590
+    Left = 597
+    Height = 541
     Top = 0
     Width = 221
     Align = alRight
-    ClientHeight = 590
+    ClientHeight = 541
     ClientWidth = 221
     TabOrder = 0
     object ChooseFileButton: TButton
@@ -6885,7 +6887,7 @@ object Form1: TForm1
     end
   end
   object ChooseFileDialog: TOpenDialog
-    Filter = '.jpg|.jpg|.bmp|.bmp'
+    Filter = 'JPG|*.jpg|BMP|*.bmp'
     left = 672
     top = 520
   end
