--- a/unit1.lfm
+++ b/unit1.lfm
@@ -59,6 +59,55 @@ object Form1: TForm1
       OnClick = resizeImageClick
       TabOrder = 2
     end
+    object resizeButton: TButton
+      Left = 19
+      Height = 25
+      Top = 200
+      Width = 178
+      Caption = 'Изменить размер'
+      OnClick = resizeButtonClick
+      TabOrder = 3
+    end
+    object width_image: TEdit
+      Left = 23
+      Height = 23
+      Top = 235
+      Width = 60
+      TabOrder = 4
+      Text = '200'
+    end
+    object height_image: TEdit
+      Left = 123
+      Height = 23
+      Top = 236
+      Width = 60
+      TabOrder = 5
+      Text = '200'
+    end
+    object Label2: TLabel
+      Left = 85
+      Height = 15
+      Top = 243
+      Width = 12
+      Caption = 'px'
+      ParentColor = False
+    end
+    object Label3: TLabel
+      Left = 185
+      Height = 15
+      Top = 244
+      Width = 12
+      Caption = 'px'
+      ParentColor = False
+    end
+    object Label4: TLabel
+      Left = 107
+      Height = 15
+      Top = 243
+      Width = 7
+      Caption = 'X'
+      ParentColor = False
+    end
   end
   object ScrollBox1: TScrollBox
     Left = 0
